--- a/css/sass/test.sass
+++ b/css/sass/test.sass
@@ -37,6 +37,15 @@ article
     transform: translate(-50%, 0) rotate(-45deg)
     z-index: 2
 
+.rocket_IMG_fire
+    width: 250px
+    position: absolute
+    bottom: 110px
+    left: 50%
+    transform: translate(-50%, 0) rotate(-45deg)
+    z-index: 2
+    opacity: 0
+
 .earth_IMG
     position: absolute
     width: 325px
